--- a/devolucion_moneda_listas.ipynb
+++ b/devolucion_moneda_listas.ipynb
@@ -31,15 +31,15 @@
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el cambio en Euros (por ejemplo 2.35):23.45\n"
+       "text": "Introduce el cambio en Euros (por ejemplo 2.35):3.34\n"
       },
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Su cambio:\n   11 monedas de 2 Euros\n   1 moneda de 1 Euro\n   2 monedas de 20 Centimos\n   1 moneda de 5 Centimos\n"
+       "text": "Su cambio:\n   1 moneda de 2 Euros\n   1 moneda de 1 Euro\n   1 moneda de 20 Centimos\n   1 moneda de 10 Centimos\n   2 monedas de 2 Centimos\n"
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -57,7 +57,7 @@
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el cambio en Euros (por ejemplo 2.35):34.35\n"
+       "text": "Introduce el cambio en Euros (por ejemplo 2.35):23.45\n"
       },
       {
        "output_type": "stream",
@@ -68,57 +68,57 @@
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 2 Euros:10\n"
+       "text": "Introduce el numero de monedas de 2 Euros:12\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 1 Euro:10\n"
+       "text": "Introduce el numero de monedas de 1 Euro:1\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 50 Centimos:5\n"
+       "text": "Introduce el numero de monedas de 50 Centimos:2\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 20 Centimos:5\n"
+       "text": "Introduce el numero de monedas de 20 Centimos:2\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 10 Centimos:5\n"
+       "text": "Introduce el numero de monedas de 10 Centimos:2\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 5 Centimos:5\n"
+       "text": "Introduce el numero de monedas de 5 Centimos:2\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 2 Centimos:5\n"
+       "text": "Introduce el numero de monedas de 2 Centimos:2\n"
       },
       {
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el numero de monedas de 1 Centimo:5\n"
+       "text": "Introduce el numero de monedas de 1 Centimo:2\n"
       },
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Su cambio:\n   10 monedas de 2 Euros\n   10 monedas de 1 Euro\n   5 monedas de 50 Centimos\n   5 monedas de 20 Centimos\n   5 monedas de 10 Centimos\n   5 monedas de 5 Centimos\n   5 monedas de 2 Centimos\n"
+       "text": "Su cambio:\n   11 monedas de 2 Euros\n   1 moneda de 1 Euro\n   2 monedas de 20 Centimos\n   1 moneda de 5 Centimos\n"
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -132,7 +132,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -145,15 +145,15 @@
        "name": "stdout",
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Introduce el cambio en Euros (por ejemplo 2.35):34.54\n"
+       "text": "Introduce el cambio en Euros (por ejemplo 2.35):23.56\n"
       },
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "Su cambio:\n   17 monedas de 2 Euros\n   1 moneda de 50 Centimos\n   2 monedas de 2 Centimos\n"
+       "text": "Su cambio:\n   11 monedas de 2 Euros\n   1 moneda de 1 Euro\n   1 moneda de 50 Centimos\n   1 moneda de 5 Centimos\n   1 moneda de 1 Centimo\n"
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -167,7 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -182,7 +182,7 @@
        "text": "Su cambio:\n   17 monedas de 2 Euros\n   1 moneda de 50 Centimos\n   2 monedas de 2 Centimos\n"
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -213,6 +213,50 @@
       }
      ],
      "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "Usando las listas las cosas quedan mejor, una sucesi\u00f3n de instrucciones muy parecidas se sustituyen por un bucle. Adem\u00e1s la funci\u00f3n vale para cualquier sistema monetario (suficientemente bueno como para que nuestro algoritmo funcione)"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def cambio_moneda(cambio,valores):\n    #cambio es un entero positivo\n    #valores en una lista de enteros mayores que cero ordenados de mayor a menor, \n    #representan el valor de las monedas en un sistema monetario.\n    #devuelve una lista, monedas, que contiene el numero de monedas de cada tipo a devolver.\n    #monedas[i] es el n\u00famero de monedas de valor valores[i] que debemos devolver.\n    resto=cambio\n    monedas=[0]*len(valores) # en monedas vamos a almacenar el n\u00famero de monedas de cada valor\n                             # monedas[i] ser\u00e1 el n\u00famero de monedas de valor valores[i] a devolver\n    for i in range(len(valores)):\n        monedas[i]=resto/valores[i]\n        resto=resto%valores[i]\n    return monedas",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def cambio_interactivo():\n    cambio=float(raw_input(\"Introduce el cambio en Euros (por ejemplo 2.35):\"))\n    valores=[200,100,50,20,10,5,2,1]\n    centimos=int(round(cambio*100))\n    monedas=cambio_moneda(centimos,[200,100,50,20,10,5,2,1])\n    escribe(monedas,valores)\n\ndef escribe(monedas,valores):\n    print \"Su cambio:\"\n    for i in range(len(valores)):\n        escribe_cambio(monedas[i],valores[i])\n\ndef escribe_cambio(num_mon,valor):\n    if num_mon==1:\n        if valor==200:\n            print \"  \",num_mon,\"moneda de 2 Euros\"\n        elif valor==100:\n            print \"  \",num_mon,\"moneda de 1 Euro\"\n        elif valor==1:\n            print \"  \",num_mon,\"moneda de 1 Centimo\"\n        else:\n            print \"  \",num_mon,\"moneda de \"+str(valor)+\" Centimos\"\n    elif num_mon!=0:\n        if valor==200:\n            print \"  \",num_mon,\"monedas de 2 Euros\"\n        elif valor==100:\n            print \"  \",num_mon,\"monedas de 1 Euro\"\n        elif valor==1:\n            print \"  \",num_mon,\"monedas de 1 Centimo\"\n        else:\n            print \"  \",num_mon,\"monedas de \"+str(valor)+\" Centimos\"\n",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "cambio_interactivo()",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": "Introduce el cambio en Euros (por ejemplo 2.35):45.79\n"
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": "Su cambio:\n   22 monedas de 2 Euros\n   1 moneda de 1 Euro\n   1 moneda de 50 Centimos\n   1 moneda de 20 Centimos\n   1 moneda de 5 Centimos\n   2 monedas de 2 Centimos\n"
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
