--- a/Listas.ipynb
+++ b/Listas.ipynb
@@ -45,7 +45,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "primos[4]",
+     "input": "primos[5]",
      "language": "python",
      "metadata": {},
      "outputs": [
@@ -53,7 +53,7 @@
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 3,
-       "text": "11"
+       "text": "13"
       }
      ],
      "prompt_number": 3
@@ -137,7 +137,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -349,11 +349,18 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "primos1=primos+[30,37,41,43,47]",
+     "input": "primos1=primos+[30,37,41,43,47]\nprimos1",
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 19
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 30, 37, 41, 43, 47]"
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -431,7 +438,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -507,7 +514,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -540,10 +547,10 @@
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "0.00699996948242\n"
+       "text": "0.00999999046326\n"
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -555,10 +562,10 @@
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "0.394999980927\n"
+       "text": "0.407999992371\n"
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -604,11 +611,42 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": "l=[[1,2,3],'Hola',3,4,6]\nl",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": "[[1, 2, 3], 'Hola', 3, 4, 6]"
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "l[0][2]",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": "3"
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": "",
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 35
+     "outputs": []
     }
    ],
    "metadata": {}
