--- a/Mutabilidad de las listas.ipynb
+++ b/Mutabilidad de las listas.ipynb
@@ -14,7 +14,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -23,7 +23,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -44,11 +44,11 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 6,
        "text": "6"
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -57,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -66,7 +66,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -75,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -87,46 +87,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 10,
        "text": "[0, 1, 2, 3, 4, 10, 6]"
       }
      ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": "l=l+[7]\nl",
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": "[0, 1, 2, 3, 4, 10, 6, 7]"
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": "Un intento de procedimiento que a\u00f1ada un elemento  a una lista"
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": "def aniadir(lista,e):\n    lista=lista+[e]",
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "aniadir(l,8)\nl",
+     "input": "l=l+[7]\nl",
      "language": "python",
      "metadata": {},
      "outputs": [
@@ -142,6 +112,36 @@
     {
      "cell_type": "markdown",
      "metadata": {},
+     "source": "Un intento de procedimiento que a\u00f1ada un elemento  a una lista"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def aniadir(lista,e):\n    lista=lista+[e]",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "aniadir(l,8)\nl",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": "[0, 1, 2, 3, 4, 10, 6, 7]"
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
      "source": "Los objetos tienen \"m\u00e9todos\", son procedimientos que \nmodifican el objeto sobre el que se aplican. El m\u00e9todo que a\u00f1ade\nun elemento a una lista se llama append la sintaxis se muestra a \ncontinuaci\u00f3n"
     },
     {
@@ -151,7 +151,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -163,16 +163,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 15,
        "text": "[0, 1, 2, 3, 4, 10, 6, 7, 8]"
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": "Aunque ya resulta superfluo ya podemos escribir el procedimiento aniadir."
+     "source": "Aunque ya resulta superfluo ahora podemos escribir el procedimiento aniadir."
     },
     {
      "cell_type": "code",
@@ -181,7 +181,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -193,11 +193,11 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 17,
        "text": "[0, 1, 2, 3, 4, 10, 6, 7, 8, 9]"
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -212,17 +212,17 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": "l=[1,2,3]\nl1=l\nl1[0]=100\nprint l[0]\n",
+     "input": "l=[1,2,3]\nm=l\nm[0]=100\nprint l\n",
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": "100\n"
+       "text": "[100, 2, 3]\n"
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -237,12 +237,238 @@
        "text": "1\n"
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": "Como el entero 1 es inmutable nadie puede modificar el valor apuntado por la variable a usando otra variable distinta. Sin embargo podemos cambiar el valor \napuntado por l[0] a trav\u00e9s de otra referencia, l1, a la lista."
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "La versi\u00f3n inmutable de las listas son las tuplas. Se delimitan con ( ). "
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "t=(2,3,4)",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "tuple(l)",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 23,
+       "text": "(100, 2, 3)"
+      }
+     ],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "t[0]=3",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "'tuple' object does not support item assignment",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-24-9b6bf0b87cea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "t",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": "(2, 3, 4)"
+      }
+     ],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "nombre=\"paco\"",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "nombre[0]",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": "'p'"
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "nombre[0]='P'",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "'str' object does not support item assignment",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-28-75396cb2eb4f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnombre\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'P'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "Es f\u00e1cil no hacer lo que queremos al manejar listas de listas para representar matrices. La siguiente funci\u00f3n pretende construir una matriz con todas sus entradas nulas."
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def matriz_nula(n,m):\n    fila=[0]*m\n    result=[fila]*n\n    return result",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat=matriz_nula(5,6)",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": "[[0, 0, 0, 0, 0, 0],\n [0, 0, 0, 0, 0, 0],\n [0, 0, 0, 0, 0, 0],\n [0, 0, 0, 0, 0, 0],\n [0, 0, 0, 0, 0, 0]]"
+      }
+     ],
+     "prompt_number": 31
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat[0][0]=1",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 33,
+       "text": "[[1, 0, 0, 0, 0, 0],\n [1, 0, 0, 0, 0, 0],\n [1, 0, 0, 0, 0, 0],\n [1, 0, 0, 0, 0, 0],\n [1, 0, 0, 0, 0, 0]]"
+      }
+     ],
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "def matriz_nula(n,m):\n    result=[]\n    for col in range(n):\n     result.append([0]*m)\n    return result",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat=matriz_nula(4,5)",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat[0][0]=1",
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "mat",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": "[[1, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]"
+      }
+     ],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
