--- a/Practica2.ipynb
+++ b/Practica2.ipynb
@@ -206,7 +206,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import Image\n",
+      "from PIL import Image\n",
       "raices=[r0,r1,r2,r3]\n",
       "fractal=newton_fractal(f,derf,raices,[(255,0,0),(0,255,0),(0,0,255),(255,0,255)],2,2,0.005)\n",
       "fractal.show()"
@@ -227,7 +227,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import Image\n",
+      "from PIL import Image\n",
       "red = (255,0,0)\n",
       "green = (0,255,0)\n",
       "width = 600\n",
